@@ -6,11 +6,13 @@ Date: 2019-12-06
     - Biter hunting group message includes clickable GPS location of targeted player's position.
   Changes:
     - Shared damage kill alerts include how many kills and deaths the 2 participants have had
+    - Includes command to do a one off fix on bad old repeating scheduled events: december_2019_fix_scheduled_events
   Bugfixes:
     - fixed typo in snowball mod compatibility added in 17.0.13
     - Shared damage - damage <= 0 is ignored
     - Biter hunt groups will be given new attack orders should thye lose them.
     - Biter hunt group will not declare player vicotry before they are all dead now.
+    - Correct further intermittent startup crash for some players with scheduled event functions shown in logs.
   Info:
 ---------------------------------------------------------------------------------------------------
 Version: 17.0.14
